<resources>
    <string name="app_name">Tap, Tap</string>
    <string name="search">Search</string>
    <string name="close">Close</string>
    <string name="landing_title">Welcome to Tap, Tap</string>
    <string name="landing_button_get_started">Get started</string>
    <string name="landing_button_skip_setup">Skip setup</string>
    <string name="setup_foss_info_title">Tap, Tap is free and open source</string>
    <string name="setup_foss_info_content"><![CDATA[Tap, Tap is and always will be free, building off open source components. The source code is available for anyone to view and make edits to at the <a href=\"https://kieronquinn.co.uk/redirect/TapTap/github\">GitHub repository</a>. Official free downloads for the app are <b>only</b> available at <a href="https://kieronquinn.co.uk/redirect/TapTap/xda">XDA</a>, the <a href="https://kieronquinn.co.uk/redirect/TapTap/github">GitHub repository</a>, and <a href="https://kieronquinn.co.uk/redirect/TapTap/apkmirror">APKMirror</a>. The official app will always automatically offer to download updates from GitHub, if you have allowed internet access.]]></string>
    <string name="setup_foss_info_warning">Only install Tap, Tap from one of the official sources linked above. <b>If you downloaded from any other source, it is highly recommended you uninstall it and reinstall from one of the links above</b>. Tap for more info.</string>
    <string name="setup_foss_info_bs_title">Warning</string>
    <string name="setup_foss_info_bs_content">Tap, Tap uses an Accessibility Service. This gives it access to perform actions on your device automatically, and should not be granted to apps you do not trust. This is why Tap, Tap is open source - so you and everyone else who wants to can look at the code and verify it\'s not doing anything it shouldn\'t be.\n\nHowever, this guarantee  does not apply if you downloaded the APK from a source other than the official locations. If you downloaded from anywhere other than the GitHub repository, XDA or APKMirror, it is highly recommended that you uninstall it immediately and reinstall it from one of the official locations.</string>
    <string name="setup_foss_info_content_lower">If you like the Tap, Tap app and wish to make a donation, the link to do so is near the bottom of the \"More\" page after setup. Regardless of whether you donate, your sharing and support and use of Tap, Tap is much appreciated, thank you!</string>
    <string name="setup_info_next">Next</string>
    <string name="setup_notifications_title">Notifications</string>
    <string name="setup_notifications_content">Tap, Tap uses notifications to inform you of action and gate requirements, as well as possible errors and other important app functions.\n\nPlease enable notifications to allow the app to work properly, you can disable the background service notification <b>only</b> at a later time.</string>
    <string name="setup_notifications_request">Grant Permission</string>
    <string name="setup_gesture_toolbar">Gesture Configuration</string>
    <string name="setup_gesture_device_size"><![CDATA[Select the best model size for your device.<br><b>Currently selected: %1$s</b><br>If you are struggling to get any response to the gesture, try some of the other models.]]></string>
    <string name="setup_gesture_loading">Loading…</string>
    <string name="setup_gesture_info_hint">Double tap the back of your device to activate the gesture.\n<b>Try to tap firmly, using the tip of your index finger.</b></string>
    <string name="setup_gesture_info_help">Not working? Try changing the device size and sensitivity in the Gesture Configuration panel</string>
    <string name="setup_gesture_info_success"><b>Great! Tap to continue.</b>\nTip: If you are struggling to use the gesture, you can adjust the size &amp; sensitivity in the Gesture Configuration panel, or later in the settings.</string>
    <string name="setup_complete_card">Actions &amp; Gates may require permissions to be granted the first time they are added or used, look out for notifications to set them up.</string>
    <string name="setup_complete_title">Setup Complete</string>
    <string name="dialog_internet_permission_text">Allow Internet Access?</string>
    <string name="dialog_internet_permission_desc">This will only be used to retrieve device specifications and periodically check for updates in the background.</string>
    <string name="dialog_internet_permission_allow_always">Allow Always</string>
    <string name="dialog_internet_permission_allow_open">Allow while Tap, Tap is open</string>
    <string name="dialog_internet_permission_deny">Deny</string>
    <string name="setup_upgrade_loading">Upgrading Settings…</string>
    <string name="modal_no_gyroscope_title">Device Incompatible</string>
    <string name="modal_no_gyroscope_content">Your device does not have the required sensor (a gyroscope) to use this app. Tap, Tap will never work on this device.</string>
    <string name="modal_disable_columbus_title">Disable or Reconfigure Quick Tap</string>
    <string name="modal_disable_columbus_content"><![CDATA[The system Quick Tap is enabled on your device, but not setup correctly, please disable or configure it correctly or Tap, Tap will not function properly.<br>Quick Tap can be found in the System Settings, under System > Gestures.<br><br><b>If you are trying to enable Native Mode, please make sure you have set the action to Launch App > Tap, Tap, and that you have granted the READ_LOGS permission. <a href="https://kieronquinn.co.uk/redirect/TapTap/nativesetup">Tap here for more info</a>.</b>]]></string>
    <string name="modal_disable_columbus_card">You may need to reboot after disabling the system Quick Tap for some features of Tap, Tap to work.</string>
    <string name="modal_disable_columbus_button">Open Settings</string>
    <string name="settings_main_enable_tap_tap">Enable Tap, Tap</string>
    <string name="setting_bottom_nav_settings">Settings</string>
    <string name="setting_bottom_nav_gesture">Gesture</string>
    <string name="setting_bottom_nav_more">More</string>
    <string name="menu_setup_wizard">Re-run Setup</string>
    <string name="settings_main_battery"><b>Disable Battery Optimisation</b>\nTo help prevent Tap, Tap from being killed in the background, tap to disable battery optimisation</string>
    <string name="setting_actions_double">Double Tap Actions</string>
    <string name="setting_actions_triple">Triple Tap Actions</string>
    <string name="settings_actions_desc_double">Set the actions to be run when you tap on the back of your device twice</string>
    <string name="settings_actions_desc_triple">Set the actions to be run when you tap on the back of your device three times</string>
    <string name="setting_gates">Gates</string>
    <string name="setting_gates_desc">Set situations when the gesture should not run an action</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_feedback_desc">Set how the device notifies you when the gesture is run</string>
    <string name="setting_feedback_vibrate">Vibrate</string>
    <string name="setting_feedback_vibrate_desc">Vibrate once when the gesture is used and the action is run</string>
    <string name="setting_feedback_wake">Wake Device</string>
    <string name="setting_feedback_wake_desc">Wake the device up if the screen is off</string>
    <string name="slider_sensitivity_very_low">Very low</string>
    <string name="slider_sensitivity_low">Low</string>
    <string name="slider_sensitivity_medium">Medium</string>
    <string name="slider_sensitivity_high">High</string>
    <string name="slider_sensitivity_very_high">Very high</string>
    <string name="setting_feedback_override_dnd">Vibrate when do not disturb is enabled</string>
    <string name="setting_feedback_override_dnd_desc">Ignore the device\'s DND setting and always vibrate when triggered</string>
    <string name="fab_add_action">Add Action</string>
    <string name="fab_remove_action">Remove</string>
    <string name="help_action">Actions are tasks that are run when you tap the back of your device twice. Actions are run in the order of the list - top to bottom, and only if requirements are met.\nTap for more info.</string>
    <string name="bs_help_action">Actions are tasks that are run when you tap the back of your device twice. Actions are run in the order of the list - top to bottom. If an action is able to run successfully, no further actions will be run. However, if an action is unavailable (eg. if the assistant for a "Launch assistant" action is already running, or if the requirements are not met), the next action below it will be run, and so on until one is run successfully.</string>
    <string name="bs_help_action_title">What are Actions?</string>
    <string name="item_action_when_empty">Add requirement…</string>
    <string name="item_action_when_not_empty_single">%1d requirement</string>
    <string name="item_action_when_not_empty_other">%1d requirements</string>
    <string name="item_action_app_uninstalled">Unknown app (%1s)</string>
    <string name="switch_triple">Enable Triple Tap</string>
    <string name="settings_actions_loading_actions">Loading Actions…</string>
    <string name="help_action_triple"><b>Note:</b> When triple tap is enabled, the double tap action may be slower to respond. This is due to the fact that it has to wait to see if a third tap will be performed before running the action.</string>
    <string name="settings_actions_triple_empty">No Triple Tap Actions set, tap Add Action to add one.</string>
    <string name="settings_actions_double_empty">No Double Tap Actions set, tap Add Action to add one.</string>
    <string name="action_when_gate_inverted">%1s (Inverted)</string>
    <string name="settings_when_gates_title">Requirements</string>
    <string name="settings_actions_when_gates_empty">No Requirements set, tap Add Requirement to add one.</string>
    <string name="settings_actions_loading_when_gates">Loading Requirements…</string>
    <string name="fab_add_requirement">Add Requirement</string>
    <string name="add_action_category_launch">Launch</string>
    <string name="add_action_category_launch_desc">Launch an app, shortcut or app shortcut</string>
    <string name="add_action_category_utilities">Utilities</string>
    <string name="add_action_category_utilities_desc">Take a screenshot, toggle the flashlight, open the app drawer or accept/reject a call</string>
    <string name="add_action_category_button">Buttons</string>
    <string name="add_action_category_button_desc">Simulate button presses, such as home, back, recents or power</string>
    <string name="add_action_category_sound">Sound</string>
    <string name="add_action_category_sound_desc">Control music, change the volume or control alarms</string>
    <string name="add_action_category_gesture">Gestures</string>
    <string name="add_action_category_gesture_desc">Simulate swipe actions in up, down left or right directions</string>
    <string name="add_action_category_accessibility">Accessibility</string>
    <string name="setting_gesture_model">Device Size</string>
    <string name="setting_low_power_mode">Low Power Mode</string>
    <string name="settings_native_mode">Native Mode</string>
    <string name="setting_advanced">Advanced</string>
    <string name="settings_backup_restore">Backup &amp; Restore</string>
    <string name="settings_backup_restore_backup">Backup</string>
    <string name="settings_backup_restore_restore">Restore</string>
    <string name="battery_and_optimisation">Battery &amp; Optimisation</string>
    <string name="about_contributors">Contributors</string>
    <string name="settings_shared_shizuku_permission_flow_toolbar_title">Shizuku / Sui</string>
    <string name="snackbar_update">Update available</string>
</resources>