<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.kieronquinn.app.taptap.ui.preferences.SwitchPreference
        android:icon="@drawable/ic_feedback"
        android:key="feedback_vibrate"
        android:defaultValue="true"
        android:title="@string/setting_feedback_vibrate"
        android:summary="@string/setting_feedback_vibrate_desc"/>

    <SeekBarPreference
        android:defaultValue="100"
        app:showSeekBarValue="true"
        android:max="1000"
        app:min="100"
        android:icon="@drawable/ic_feedback_duration"
        android:key="feedback_vibrate_duration"
        android:title="@string/setting_feedback_vibrate_duration"
        android:summary="@string/setting_feedback_vibrate_duration_desc"/>

    <com.kieronquinn.app.taptap.ui.preferences.SwitchPreference
        android:icon="@drawable/ic_feedback_override_dnd"
        android:key="feedback_override_dnd"
        android:defaultValue="false"
        android:title="@string/setting_feedback_override_dnd"
        android:summary="@string/setting_feedback_override_dnd_desc"/>

    <com.kieronquinn.app.taptap.ui.preferences.SwitchPreference
        android:icon="@drawable/ic_wake_from_sleep"
        android:key="feedback_wake"
        android:defaultValue="true"
        android:title="@string/setting_feedback_wake"
        android:summary="@string/setting_feedback_wake_desc"/>

</PreferenceScreen>